# mockbuster

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
docs/howto/: ci-integration.md
docs/reference/: api.md  baseline.md  cli.md  configuration.md  index.md  patterns.md
src/mockbuster/: __init__.py  baseline.py  cli.py  comments.py  config.py  core.py
tests/: test_baseline.py  test_cli.py  test_comments.py  test_config.py  test_core.py  test_docs.py  test_usage_detection.py
